--- a/css/front.css
+++ b/css/front.css
@@ -69,6 +69,10 @@ li:hover {
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.5);
 }
+li.blog-link > a {
+	color: rgb(153, 34, 115);
+	text-shadow: #FFF 0px 0px 1px;
+}
 a {
     color: white;
     padding: 15px;
@@ -79,45 +83,50 @@ a {
 }
 
 @media (max-width: 450px) {
-ul {
-    text-align: center;
-}
-li {
-    border-radius: 0%;
-    border: none;
-    color: white;
-    margin: 8px;
-    display: block;
-    list-style: none;
-    margin: 10px 0px;
-    text-align: center;
-    height: auto;
-    width: auto;
-}
-li:hover {
-    background-color: none;
-    transition: none;
-}
-a {
-    text-align: justify;
-    border: 2px solid white;
-    border-radius: 5px;
-    color: white;
-    padding: 15px;
-    padding-left: 30px;
-    width: 70%;
-}
-a:hover {
-    -webkit-transition: 500ms;
-    -moz-transition: 500ms;
-    transition: 500ms;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    text-decoration: none;
-}
-.description {
-    display: inline-block;
-    color: white;
-    font-family: "Droid Sans";
-    margin-left: 40px;
+	ul {
+			text-align: center;
+	}
+	li {
+			border-radius: 0%;
+			border: none;
+			color: white;
+			margin: 8px;
+			display: block;
+			list-style: none;
+			margin: 10px 0px;
+			text-align: center;
+			height: auto;
+			width: auto;
+	}
+	li:hover {
+			background-color: none;
+			transition: none;
+	}
+	a {
+			text-align: justify;
+			border: 2px solid white;
+			border-radius: 5px;
+			color: white;
+			padding: 15px;
+			padding-left: 30px;
+			width: 70%;
+	}
+	a:hover {
+			-webkit-transition: 500ms;
+			-moz-transition: 500ms;
+			transition: 500ms;
+			background-color: rgba(0, 0, 0, 0.5);
+			color: white;
+			text-decoration: none;
+	}
+	li.blog-link > a {
+		color: rgb(153, 34, 115);
+		text-shadow: #FFF 0px 0px 1px;
+	}
+	.description {
+			display: inline-block;
+			color: white;
+			font-family: "Droid Sans";
+			margin-left: 40px;
+	}
 }
