--- a/css/main.sass
+++ b/css/main.sass
@@ -25,8 +25,6 @@ $font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 main
   display: block
 
-
-
 body
   font-family: $font-sans
   margin: 0
@@ -206,7 +204,8 @@ body
   line-height: 44px
   display: inline-block
   white-space: nowrap
-  color: rgba(0,0,0,0.25)
+  color: rgba(255,255,255,0.6)
+  text-shadow: 0px 1px 4px rgba(0,0,0,0.25), 0px 0px 1px rgba(0,0,0,0.5)
   font-size: 14px
   letter-spacing: -0.02em
   font-weight: 400
