--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -121,7 +121,7 @@
         {% if page.category %}
         <a href="/{{ page.category }}/" class="btn">Back to {{ page.category }}</a>
         {% else %}
-        <a href="/blogging/" class="btn">Back to Overview</a>
+        <a href="/all/" class="btn">Back to Overview</a>
         {% endif %}
       </div>
     </div>
