--- a/_includes/front_head.html
+++ b/_includes/front_head.html
@@ -13,6 +13,26 @@ if ((host == window.location.host) && (window.location.protocol != "https:"))
   window.location.protocol = "https";
 </script>
 <script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+        const dropdownToggle = document.querySelector(".dropdown-toggle");
+        const dropdownMenu = document.querySelector(".dropdown-menu");
+
+        dropdownToggle.addEventListener("click", function() {
+            const isMenuVisible = dropdownMenu.style.display === 'block';
+            dropdownMenu.style.display = isMenuVisible ? 'none' : 'block';
+        });
+
+        // Hide dropdown menu when clicked outside
+        document.addEventListener('click', function(event) {
+            const isClickInside = dropdownToggle.contains(event.target);
+            if (!isClickInside) {
+                dropdownMenu.style.display = 'none';
+            }
+        });
+    });
+
+</script>
+<script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
