--- a/css/front.css
+++ b/css/front.css
@@ -12,7 +12,7 @@ body {
 }
 #fullscreen {
     z-index: -999;
-    min-height: 100%;
+    min-height: 100vh;
     min-width: 1024px;
     width: 100%;
     height: auto;
@@ -149,8 +149,8 @@ a {
 
 /* Primary and secondary button colors */
 .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #a77773;
+    border-color: #90696d;
 }
 
 .btn-secondary {
