--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -44,7 +44,7 @@
       </article>
     </main>
     <div class="bottom-closer">
-      <div class="background-closer-image" {%if site.cover %} style="background-image: url({{ site.cover }})"{% endif %}>
+      <div class="background-closer-image" {%if site.cover %} style="background-image: url({{ site.cover | resize: '1440x3000'}})"{% endif %}>
         Image
       </div>
       <div class="inner">
