--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,10 +9,10 @@
       <article class="post">
         {% if page.image %}
         <div class="article-image">
-          <div class="post-image-image" style="background-image: url({% if page.image %}{{ page.image | resize: '1440x3000' }}{% endif %})">
+          <div class="post-image-image" style="background-image: url({% if page.image %}{{ page.image }}{% endif %})">
             Article Image
           </div>
-          <div class="post-image-image2" style="background-image: url({% if page.image2 %}{{ page.image2 | resize: '1440x3000' }}{% endif %})">
+          <div class="post-image-image2" style="background-image: url({% if page.image2 %}{{ page.image2 }}{% endif %})">
             Article Image
           </div>
           <div class="post-meta">
