--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 ---
 ---
-<!DOCTYPE html>
+
+<!doctype html>
 <html>
   {% include head.html %}
   <body itemscope itemtype="http://schema.org/Article">
@@ -9,17 +10,34 @@
       <article class="post">
         {% if page.image %}
         <div class="article-image">
-          <div class="post-image-image" style="background-image: url({% if page.image %}{{ page.image }}{% endif %})">
+          <div
+            class="post-image-image"
+            style="background-image: url({% if page.image %}{{ page.image }}{% endif %})"
+          >
             Article Image
           </div>
           <div class="post-meta">
             <h1 class="post-title">{{ page.title }}</h1>
             <div class="cf post-meta-text">
-              <div class="author-image" style="background-image: url({{ site.author_image }})">Blog Logo</div>
-              <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ site.author }}</h4>
+              <div
+                class="author-image"
+                style="background-image: url({{ site.author_image }})"
+              >
+                Blog Logo
+              </div>
+              <h4
+                class="author-name"
+                itemprop="author"
+                itemscope
+                itemtype="http://schema.org/Person"
+              >
+                {{ site.author }}
+              </h4>
             </div>
-            <div style="text-align:center">
-              <a href="#topofpage" class="topofpage"><i class="fa fa-angle-down"></i></a>
+            <div style="text-align: center">
+              <a href="#topofpage" class="topofpage"
+                ><i class="fa fa-angle-down"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -28,14 +46,26 @@
           <div class="post-meta">
             <h1 class="post-title">{{ page.title }}</h1>
             <div class="cf post-meta-text">
-              <div class="author-image" style="background-image: url({{ page.author_image }})">Blog Logo</div>
-              <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ page.author }}</h4>
+              <div
+                class="author-image"
+                style="background-image: url({{ page.author_image }})"
+              >
+                Blog Logo
+              </div>
+              <h4
+                class="author-name"
+                itemprop="author"
+                itemscope
+                itemtype="http://schema.org/Person"
+              >
+                {{ page.author }}
+              </h4>
             </div>
           </div>
         </div>
-        <br>
-        <br>
-        <br>
+        <br />
+        <br />
+        <br />
         {% endif %}
         <section class="post-content">
           <a name="topofpage"></a>
@@ -44,7 +74,16 @@
       </article>
     </main>
     <div class="bottom-closer">
-      <div class="background-closer-image" {%if site.cover %} style="background-image: url({{ site.cover | resize: '1440x3000'}})"{% endif %}>
+      <div
+        class="background-closer-image"
+        {%if
+        site.cover
+        %}
+        style="background-image: url({{ site.cover | resize: '1440x3000'}})"
+        {%
+        endif
+        %}
+      >
         Image
       </div>
       <div class="inner">
