--- a/_sass/bourbon/addons/_directional-values.scss
+++ b/_sass/bourbon/addons/_directional-values.scss
@@ -21,20 +21,33 @@
 @function collapse-directionals($vals) {
   $output: null;
 
-  $A: nth( $vals, 1 );
-  $B: if( length($vals) < 2, $A, nth($vals, 2));
-  $C: if( length($vals) < 3, $A, nth($vals, 3));
-  $D: if( length($vals) < 2, $A, nth($vals, if( length($vals) < 4, 2, 4) ));
+  $A: nth($vals, 1);
+  $B: if(length($vals) < 2, $A, nth($vals, 2));
+  $C: if(length($vals) < 3, $A, nth($vals, 3));
+  $D: if(length($vals) < 2, $A, nth($vals, if(length($vals) < 4, 2, 4)));
 
-  @if $A == 0 { $A: 0 }
-  @if $B == 0 { $B: 0 }
-  @if $C == 0 { $C: 0 }
-  @if $D == 0 { $D: 0 }
+  @if $A == 0 {
+    $A: 0;
+  }
+  @if $B == 0 {
+    $B: 0;
+  }
+  @if $C == 0 {
+    $C: 0;
+  }
+  @if $D == 0 {
+    $D: 0;
+  }
 
-  @if $A == $B and $A == $C and $A == $D { $output: $A          }
-  @else if $A == $C and $B == $D         { $output: $A $B       }
-  @else if $B == $D                      { $output: $A $B $C    }
-  @else                                  { $output: $A $B $C $D }
+  @if $A == $B and $A == $C and $A == $D {
+    $output: $A;
+  } @else if $A == $C and $B == $D {
+    $output: $A $B;
+  } @else if $B == $D {
+    $output: $A $B $C;
+  } @else {
+    $output: $A $B $C $D;
+  }
 
   @return $output;
 }
@@ -51,40 +64,58 @@
 
 @mixin directional-property($pre, $suf, $vals) {
   // Property Names
-  $top:    $pre + "-top"    + if($suf, "-#{$suf}", "");
+  $top: $pre + "-top" + if($suf, "-#{$suf}", "");
   $bottom: $pre + "-bottom" + if($suf, "-#{$suf}", "");
-  $left:   $pre + "-left"   + if($suf, "-#{$suf}", "");
-  $right:  $pre + "-right"  + if($suf, "-#{$suf}", "");
-  $all:    $pre +             if($suf, "-#{$suf}", "");
+  $left: $pre + "-left" + if($suf, "-#{$suf}", "");
+  $right: $pre + "-right" + if($suf, "-#{$suf}", "");
+  $all: $pre + if($suf, "-#{$suf}", "");
 
   $vals: collapse-directionals($vals);
 
   @if contains-falsy($vals) {
-    @if nth($vals, 1) { #{$top}: nth($vals, 1); }
+    @if nth($vals, 1) {
+      #{$top}: nth($vals, 1);
+    }
 
     @if length($vals) == 1 {
-      @if nth($vals, 1) { #{$right}: nth($vals, 1); }
+      @if nth($vals, 1) {
+        #{$right}: nth($vals, 1);
+      }
     } @else {
-      @if nth($vals, 2) { #{$right}: nth($vals, 2); }
+      @if nth($vals, 2) {
+        #{$right}: nth($vals, 2);
+      }
     }
 
     // prop: top/bottom right/left
     @if length($vals) == 2 {
-      @if nth($vals, 1) { #{$bottom}: nth($vals, 1); }
-      @if nth($vals, 2) { #{$left}:   nth($vals, 2); }
+      @if nth($vals, 1) {
+        #{$bottom}: nth($vals, 1);
+      }
+      @if nth($vals, 2) {
+        #{$left}: nth($vals, 2);
+      }
 
-    // prop: top right/left bottom
+      // prop: top right/left bottom
     } @else if length($vals) == 3 {
-      @if nth($vals, 3) { #{$bottom}: nth($vals, 3); }
-      @if nth($vals, 2) { #{$left}:   nth($vals, 2); }
+      @if nth($vals, 3) {
+        #{$bottom}: nth($vals, 3);
+      }
+      @if nth($vals, 2) {
+        #{$left}: nth($vals, 2);
+      }
 
-    // prop: top right bottom left
+      // prop: top right bottom left
     } @else if length($vals) == 4 {
-      @if nth($vals, 3) { #{$bottom}: nth($vals, 3); }
-      @if nth($vals, 4) { #{$left}:   nth($vals, 4); }
+      @if nth($vals, 3) {
+        #{$bottom}: nth($vals, 3);
+      }
+      @if nth($vals, 4) {
+        #{$left}: nth($vals, 4);
+      }
     }
 
-  // prop: top/right/bottom/left
+    // prop: top/right/bottom/left
   } @else {
     #{$all}: $vals;
   }
