--- a/_sass/bourbon/helpers/_linear-side-corner-parser.scss
+++ b/_sass/bourbon/helpers/_linear-side-corner-parser.scss
@@ -1,6 +1,12 @@
 // Private function for linear-gradient-parser
-@function _linear-side-corner-parser($image, $first-val, $prefix, $suffix, $has-multiple-vals) {
-  $val-1: str-slice($first-val, 0, $has-multiple-vals - 1 );
+@function _linear-side-corner-parser(
+  $image,
+  $first-val,
+  $prefix,
+  $suffix,
+  $has-multiple-vals
+) {
+  $val-1: str-slice($first-val, 0, $has-multiple-vals - 1);
   $val-2: str-slice($first-val, $has-multiple-vals + 1, str-length($first-val));
   $val-3: null;
   $has-val-3: str-index($val-2, " ");
@@ -10,7 +16,8 @@
     $val-2: str-slice($val-2, 0, $has-val-3 - 1);
   }
 
-  $pos: _position-flipper($val-1) _position-flipper($val-2) _position-flipper($val-3);
+  $pos: _position-flipper($val-1) _position-flipper($val-2)
+    _position-flipper($val-3);
   $pos: unquote($pos + "");
 
   // Use old spec for webkit
