--- a/_sass/bourbon/helpers/_radial-arg-parser.scss
+++ b/_sass/bourbon/helpers/_radial-arg-parser.scss
@@ -1,7 +1,7 @@
 @function _radial-arg-parser($G1, $G2, $pos, $shape-size) {
   @each $value in $G1, $G2 {
     $first-val: nth($value, 1);
-    $pos-type:  type-of($first-val);
+    $pos-type: type-of($first-val);
     $spec-at-index: null;
 
     // Determine if spec was passed to mixin
@@ -16,8 +16,7 @@
         @for $i from ($spec-at-index + 1) through length($value) {
           $pos: $pos nth($value, $i);
         }
-      }
-      @else if $spec-at-index == 1 {
+      } @else if $spec-at-index == 1 {
         @for $i from ($spec-at-index + 1) through length($value) {
           $pos: $pos nth($value, $i);
         }
@@ -28,37 +27,33 @@
     // If not spec calculate correct values
     @else {
       @if ($pos-type != color) or ($first-val != "transparent") {
-        @if ($pos-type == number)
-        or ($first-val == "center")
-        or ($first-val == "top")
-        or ($first-val == "right")
-        or ($first-val == "bottom")
-        or ($first-val == "left") {
-
+        @if ($pos-type == number) or
+          ($first-val == "center") or
+          ($first-val == "top") or
+          ($first-val == "right") or
+          ($first-val == "bottom") or
+          ($first-val == "left")
+        {
           $pos: $value;
 
           @if $pos == $G1 {
             $G1: null;
           }
-        }
-
-        @else if
-           ($first-val == "ellipse")
-        or ($first-val == "circle")
-        or ($first-val == "closest-side")
-        or ($first-val == "closest-corner")
-        or ($first-val == "farthest-side")
-        or ($first-val == "farthest-corner")
-        or ($first-val == "contain")
-        or ($first-val == "cover") {
-
+        } @else if
+          ($first-val == "ellipse") or
+          ($first-val == "circle") or
+          ($first-val == "closest-side") or
+          ($first-val == "closest-corner") or
+          ($first-val == "farthest-side") or
+          ($first-val == "farthest-corner") or
+          ($first-val == "contain") or
+          ($first-val == "cover")
+        {
           $shape-size: $value;
 
           @if $value == $G1 {
             $G1: null;
-          }
-
-          @else if $value == $G2 {
+          } @else if $value == $G2 {
             $G2: null;
           }
         }
