--- a/_sass/bourbon/helpers/_radial-gradient-parser.scss
+++ b/_sass/bourbon/helpers/_radial-gradient-parser.scss
@@ -17,33 +17,27 @@
 
     $gradients: (
       webkit-image: -webkit- + $prefix + $pos + $suffix,
-      spec-image: $image
-    )
-  }
-
-  @else if $is-spec-syntax == 1 {
+      spec-image: $image,
+    );
+  } @else if $is-spec-syntax == 1 {
     $pos: str-slice($first-val, $is-spec-syntax + 3, str-length($first-val));
 
     $gradients: (
       webkit-image: -webkit- + $prefix + $pos + $suffix,
-      spec-image: $image
-    )
-  }
-
-  @else if str-index($image, "cover") or str-index($image, "contain") {
+      spec-image: $image,
+    );
+  } @else if str-index($image, "cover") or str-index($image, "contain") {
     @warn "Radial-gradient needs to be updated to conform to latest spec.";
 
     $gradients: (
       webkit-image: null,
-      spec-image: $image
-    )
-  }
-
-  @else {
+      spec-image: $image,
+    );
+  } @else {
     $gradients: (
       webkit-image: -webkit- + $image,
-      spec-image: $image
-    )
+      spec-image: $image,
+    );
   }
 
   @return $gradients;
