--- a/css/front.css
+++ b/css/front.css
@@ -1,210 +1,210 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 
 body {
-    font-family: "Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: rgba(0, 0, 0, 0.9);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: 0;
+  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: 0;
 }
 #fullscreen {
-    z-index: -999;
-    min-height: 100vh;
-    min-width: 1024px;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
+  z-index: -999;
+  min-height: 100vh;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 #avatar {
-    height: 180px;
-    border-radius: 100%;
-    border: 5px solid white;
-    margin-bottom: 40px;
+  height: 180px;
+  border-radius: 100%;
+  border: 5px solid white;
+  margin-bottom: 40px;
 }
 h1 {
-    color: white;
-    font-weight: bold;
-    letter-spacing: 0.01em;
-    font-size: 4em;
-    font-family: "Droid Sans";
-    margin: -10px 0;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 0.01em;
+  font-size: 4em;
+  font-family: "Droid Sans";
+  margin: -10px 0;
 }
 h3 {
-    color: white;
-    padding-bottom: 20px;
+  color: white;
+  padding-bottom: 20px;
 }
 .content {
-    padding-top: 100px;
-    padding-bottom: 90px;
-    background-color: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    height: 100%;
-    padding-top: 60px;
+  padding-top: 100px;
+  padding-bottom: 90px;
+  background-color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  height: 100%;
+  padding-top: 60px;
 }
 ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 li {
-    border-radius: 100%;
-    border: 2px solid white;
-    color: white;
-    margin: 8px;
-    display: inline-block;
-    list-style: none;
-    width: 65px;
-    height: 65px;
+  border-radius: 100%;
+  border: 2px solid white;
+  color: white;
+  margin: 8px;
+  display: inline-block;
+  list-style: none;
+  width: 65px;
+  height: 65px;
 }
 li:hover {
-    color: white;
-    text-decoration: none;
-    -webkit-transition: 500ms;
-    -moz-transition: 500ms;
-    transition: 500ms;
-    text-decoration: none;
-    background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  text-decoration: none;
+  -webkit-transition: 500ms;
+  -moz-transition: 500ms;
+  transition: 500ms;
+  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 li.blog-link > a {
-	color: rgb(150, 200, 200);
+  color: rgb(150, 200, 200);
 }
 a {
-    color: white;
-    padding: 15px;
-    text-decoration: none;
+  color: white;
+  padding: 15px;
+  text-decoration: none;
 }
 .description {
-    display: none;
+  display: none;
 }
 
 @media (max-width: 450px) {
-	ul {
-			text-align: center;
-	}
-	li {
-			border-radius: 0%;
-			border: none;
-			color: white;
-			margin: 8px;
-			display: block;
-			list-style: none;
-			margin: 10px 0px;
-			text-align: center;
-			height: auto;
-			width: auto;
-	}
-	li:hover {
-			background-color: none;
-			transition: none;
-	}
-	a {
-			text-align: justify;
-			border: 2px solid white;
-			border-radius: 5px;
-			color: white;
-			padding: 15px;
-			padding-left: 30px;
-			width: 70%;
-	}
-	a:hover {
-			-webkit-transition: 500ms;
-			-moz-transition: 500ms;
-			transition: 500ms;
-			background-color: rgba(0, 0, 0, 0.5);
-			color: white;
-			text-decoration: none;
-	}
-	li.blog-link > a {
-	  color: rgb(150, 200, 200);
-		text-shadow: #FFF 0px 0px 1px;
-	}
-	.description {
-			display: inline-block;
-			color: white;
-			font-family: "Droid Sans";
-			margin-left: 40px;
-	}
+  ul {
+    text-align: center;
+  }
+  li {
+    border-radius: 0%;
+    border: none;
+    color: white;
+    margin: 8px;
+    display: block;
+    list-style: none;
+    margin: 10px 0px;
+    text-align: center;
+    height: auto;
+    width: auto;
+  }
+  li:hover {
+    background-color: none;
+    transition: none;
+  }
+  a {
+    text-align: justify;
+    border: 2px solid white;
+    border-radius: 5px;
+    color: white;
+    padding: 15px;
+    padding-left: 30px;
+    width: 70%;
+  }
+  a:hover {
+    -webkit-transition: 500ms;
+    -moz-transition: 500ms;
+    transition: 500ms;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    text-decoration: none;
+  }
+  li.blog-link > a {
+    color: rgb(150, 200, 200);
+    text-shadow: #fff 0px 0px 1px;
+  }
+  .description {
+    display: inline-block;
+    color: white;
+    font-family: "Droid Sans";
+    margin-left: 40px;
+  }
 }
 
 /* General button styles */
 .btn {
-    display: inline-block;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    background-color: #007bff;
-    color: #fff;
-    border: 1px solid transparent;
-    border-radius: 0.25rem;
-    text-decoration: none;
+  display: inline-block;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #007bff;
+  color: #fff;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  text-decoration: none;
 }
 
 /* Primary and secondary button colors */
 .btn-primary {
-    background-color: #a77773;
-    border-color: #90696d;
+  background-color: #a77773;
+  border-color: #90696d;
 }
 
 .btn-secondary {
-    background-color: #6c757d;
-    border-color: #6c757d;
+  background-color: #6c757d;
+  border-color: #6c757d;
 }
 
 /* Button group styles */
 .btn-group,
 .btn-blog-group {
-    position: relative;
-    display: inline-flex;
-    vertical-align: middle;
+  position: relative;
+  display: inline-flex;
+  vertical-align: middle;
 }
 
-.btn-group>.btn,
-.btn-blog-group>.btn {
-    position: relative;
-    flex: 1 1 auto;
+.btn-group > .btn,
+.btn-blog-group > .btn {
+  position: relative;
+  flex: 1 1 auto;
 }
 
 .btn-group .btn + .btn,
 .btn-blog-group .btn + .btn {
-    margin-left: -1px;
+  margin-left: -1px;
 }
 
 .dropdown-toggle:after {
-    display: inline-block;
-    margin-left: .255em;
-    vertical-align: .255em;
-    content: "";
-    border-top: .3em solid;
-    border-right: .3em solid transparent;
-    border-bottom: 0;
-    border-left: .3em solid transparent;
+  display: inline-block;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  content: "";
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
 }
 
 /* Dropdown styles */
 .dropdown-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
-    display: none;
-    float: left;
-    min-width: 10rem;
-    padding: .5rem 0;
-    margin: .125rem 0 0;
-    font-size: 1rem;
-    color: #212529;
-    text-align: left;
-    list-style: none;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.15);
-    border-radius: .25rem;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 10rem;
+  padding: 0.5rem 0;
+  margin: 0.125rem 0 0;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0.25rem;
 }
